--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-h" style="background-image: url(assets/images/pub2-2000x1250.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-h" style="background-image: url(assets/images/pub2-2000x1250.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(0, 0, 0);"></div>
 
@@ -385,16 +385,14 @@
     <div class="container">
         <div class="row">
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>Address</strong><br>Kazakhstan, Almaty<br>
-City, Abay 125<br><br><br>
+                <p><strong>Address</strong><br>Blanicka 26, Praha 120 00<br><br><br><br>
 <strong>Contacts</strong><br>
 Email: support@capone.com<br>
-Phone: +1 (0) 000 0000 001<br>
-Fax: +1 (0) 000 0000 002</p>
+Phone: +420 778 861 322<br><br></p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Страницы</strong></p><ul><font color="#bcbcbc"><span style="font-size: 14px; line-height: 25px;"><a href="index.html">О Баре</a></span></font><br><span style="font-size: 14px; line-height: 25px;"><a href="Alcapone.html">Al Capone</a></span><br><span style="font-size: 14px; line-height: 25px;"><a href="http://barseng.kz/menu.pdf">Меню</a></span></ul></div>
             <div class="col-xs-12 col-md-6">
-                <div class="mbr-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:ChIJwS_1cDxpgzgR_ownrv0zpVY" allowfullscreen=""></iframe></div>
+                <div class="mbr-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:EiRCbGFuaWNrw6EgMjYsIDEyMCAwMCBQcmFoYSAyLCDEjGVza28" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
