create github pages

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-h" style="background-image: url(assets/images/pub2-2000x1250.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-h" style="background-image: url(assets/images/pub2-2000x1250.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(0, 0, 0);"></div>
 
@@ -85,7 +85,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>И бар и кухня сочетают в себе американскую классику с итальянским колоритом под стать названию: виски и вермуты, пицца и бургеры. Меню в « KACHNA Al Capone» авторское и, как настоящий гангстер, хранит очень много секретов, некоторыми из которых могут поделиться с гостями. Например, необычный чесночный круассан готовится из специального сырного теста, а чтобы разгадать тайну одноименной «живой» пиццы с морепродуктами – ее надо попробовать. Кроме того, здесь есть пицца «Lego», которую можно «собрать» на свой вкус из понравившихся ингредиентов, топингов, сыров и соусов на классическом итальянском или слоеном тесте с моцареллой.</p><p><br></p></div>
+            <div class="col-xs-12 lead"><p>« KACHNA Al Capone» – концептуальный бар в стиле американской эпохи «сухого закона», расположенный в самом сердце ПРАГИ, на улице BLANICKA 26. Здесь все продумано таким образом, чтобы гости гарантированно погрузились в атмосферу лихих и харизматичных гангстеров. И бар и кухня сочетают в себе американскую классику с итальянским колоритом под стать названию: виски и вермуты, пицца и бургеры. Меню в « KACHNA Al Capone» авторское и, как настоящий гангстер, хранит очень много секретов, некоторыми из которых могут поделиться с гостями. Например, необычный чесночный круассан готовится из специального сырного теста, а чтобы разгадать тайну одноименной «живой» пиццы с морепродуктами – ее надо попробовать. Кроме того, здесь есть пицца «Lego», которую можно «собрать» на свой вкус из понравившихся ингредиентов, топингов, сыров и соусов на классическом итальянском или слоеном тесте с моцареллой.</p><p><br></p></div>
         </div>
     </div>
 
